--- a/CarRental/CarRentalDesktop/Views/GenericResources.xaml
+++ b/CarRental/CarRentalDesktop/Views/GenericResources.xaml
@@ -7,6 +7,10 @@
         <Setter Property="BorderThickness" Value="0,0,1,0" />
         <Setter Property="HorizontalContentAlignment" Value="Center" />
     </Style>
+    <Style 
+           TargetType="{x:Type TextBlock}" BasedOn="{StaticResource {x:Type TextBlock}}">
+        <Setter Property="TextTrimming" Value="CharacterEllipsis"/>
+    </Style>
     <Style x:Key="ButtonDelete"
            TargetType="{x:Type Button}">
         <Setter Property="Background" Value="Red" />
