xaml разнесла в отдельный файлы, убрала первый пустой столбец

--- a/CarRental/CarRentalDesktop/App.xaml
+++ b/CarRental/CarRentalDesktop/App.xaml
@@ -7,6 +7,9 @@
         <ResourceDictionary>
             <ResourceDictionary.MergedDictionaries>
                 <ResourceDictionary Source="../Views/CarsView.xaml" />
+                <ResourceDictionary Source="../Views/ClientsView.xaml" />
+                <ResourceDictionary Source="../Views/ManagersView.xaml" />
+                <ResourceDictionary Source="../Views/RentsView.xaml" />
             </ResourceDictionary.MergedDictionaries>
         </ResourceDictionary>
     </Application.Resources>
