добавила поля для клиентов и менеджеров, исправила ошибки на вкладке Rents

--- a/CarRental/CarRentalDesktop/Views/CarsView.xaml
+++ b/CarRental/CarRentalDesktop/Views/CarsView.xaml
@@ -86,8 +86,8 @@
                     <StackPanel Orientation="Vertical"
                                 Margin="5">
                         <TextBlock Text="Номер" />
-                        <controls:NumberTextBox MaxLength="20"
-                                                Text="{Binding CurrentCar.Number, UpdateSourceTrigger=PropertyChanged}" />
+                        <TextBox MaxLength="20"
+                                 Text="{Binding CurrentCar.Number, UpdateSourceTrigger=PropertyChanged}" />
                         <TextBlock Text="Модель" />
                         <TextBox MaxLength="20"
                                  Text="{Binding CurrentCar.Model,  UpdateSourceTrigger=PropertyChanged}" />
