--- a/CarRental/CarRentalDesktop/Views/GenericResources.xaml
+++ b/CarRental/CarRentalDesktop/Views/GenericResources.xaml
@@ -7,6 +7,13 @@
         <Setter Property="BorderThickness" Value="0,0,1,0" />
         <Setter Property="HorizontalContentAlignment" Value="Center" />
     </Style>
+    <Style TargetType="TextBox">
+        <Style.Triggers>
+            <Trigger Property="Validation.HasError" Value="true">
+                <Setter Property="ToolTip" Value="{Binding RelativeSource={x:Static RelativeSource.Self},Path=(Validation.Errors)[0].ErrorContent}"/>
+            </Trigger>
+        </Style.Triggers>
+    </Style>
     <Style 
            TargetType="{x:Type TextBlock}" BasedOn="{StaticResource {x:Type TextBlock}}">
         <Setter Property="TextTrimming" Value="CharacterEllipsis"/>
